--- a/critique2.html
+++ b/critique2.html
@@ -1,7 +1,7 @@
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 <font color="#000000" face="arial" size="3"> 
 La critique littéraire vise à <b>relever les qualités et les défauts</b> d’un livre.
-Faire une critique, c’est <b>justifier de manière convaincante et personnelle son opinion</b>. C’est aussi un moyen de <b>partager son avis</b> avec d’autres.
+Faire une critique, c’est <b>justifier de manière convaincante et personnelle son opinion</b>. C’est aussi un moyen de <b>partager son avis</b> avec d’autres.</font> 
 	<br /> <br />
 En t'identifiant avec Elyco, tu peux poster tes critiques sur les livres du CDI !
 	<br /><br />
