--- a/critique2.html
+++ b/critique2.html
@@ -3,9 +3,10 @@
 La critique littéraire vise à <b>relever les qualités et les défauts</b> d’un livre.
 Faire une critique, c’est <b>justifier de manière convaincante et personnelle son opinion</b>. C’est aussi un moyen de <b>partager son avis</b> avec d’autres.</font> 
 	<br /> <br />
-En t'identifiant avec Elyco, tu peux poster tes critiques sur les livres du CDI !
+<font color="#000000" face="arial" size="3">
+En t'identifiant avec Elyco, tu peux poster tes critiques sur les livres du CDI ! </font>
 	<br /><br />
-<h3><b><u>I - Présentation du livre</u></b></h3>
+<h3><b><u><font color="#000000" face="arial" size="4">I - Présentation du livre</font></u></b></h3>
 <br />
 <form name="titre">
 	<b>Quel est le titre du livre ?</b>&nbsp;
